# trading-compose-dev

./: .gitignore  flowchart.mmd  g1_412837_runtime_v1_runtime.db  g1_runtime_like_reconstruct.py  pyproject.toml
composer_original/: IMPLEMENTATION_TASKS_LOCKED_THREE_PROFILES.md  README.md
csp47_overlay_research_v1/: README.md
fast_entry_variant_v1/: README.md
g1_412837_runtime_v1/: runtime_g1_412837_loop.py
improvements2_impl/: ACCEPTANCE_TEST_MATRIX.csv  ACCEPTANCE_TEST_MATRIX.md  ACTION_PLAN.md  BACKLOG_CANONICAL.csv  PHASE1_COMMANDS.md  PHASE2_COMMANDS.md  PHASE3_COMMANDS.md  PHASE3_DECISION_COMMANDS.md  PHASE4_COMMANDS.md  PHASE5_COMMANDS.md  README.md  REVIEW_3PASS.md  SPEC_CANONICAL.md
m0106_runtime_v1/: README.md  runtime_m0106_loop.py
meta_router_v1/: README.md
meta_router_v2/: README.md
paper_live_parity_alt/: README.md  compare_replay_to_backtest.py  fetch_alpaca_fills.py  replay_from_fills.py
protective_stop_variant_v1/: README.md
protective_stop_variant_v2/: README.md
research/: GRID_CATALOG.csv  GRID_CATALOG.md  README.md  controlplane_dd_fix_eval.py  controlplane_dd_fix_sweep.py  gpu_env_check.py  gpu_native_daily_batch.py  grid_catalog.py  indicator_gating_strict_eval.py  indicator_gating_sweep.py  short_dd_material_sweep.py  short_long_dd_constrained_sweep.py  short_window_overlay_sweep.py  sweep_runner.py  v2_return_dd_upgrade_search.py
soxl_growth/: __init__.py  __main__.py  config.py  db.py  logging_setup.py  main.py  runtime_controls.py  types.py
switch_runtime_v1/: README.md  runtime_switch_loop.py  (+4 more)
(+8827 files in other folders)
